-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.2
-
d399bdddc (dev), dc124f206 (6.8), 93b32109b (tqtc/lts-6.5)
QProgressBar Windows style has changed compared to how it looked in Qt 5.15.
To reproduce the issue, run the attached example project.
To enable the workaround, uncomment line 70.
| For Gerrit Dashboard: QTBUG-129386 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 595879,2 | QCommonStyle: pass orientation to PE_IndicatorProgressChunk | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 595909,2 | QCommonStyle: pass orientation to PE_IndicatorProgressChunk | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 595912,2 | QCommonStyle: pass orientation to PE_IndicatorProgressChunk | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |